--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   # geolocator: ^11.1.0
   spider: ^4.2.2
   flutter_svg: ^2.0.10+1
+  flutter_riverpod: ^2.5.1
 
 dev_dependencies:
   flutter_test:
