--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   spider: ^4.2.2
   flutter_svg: ^2.0.10+1
   flutter_riverpod: ^2.5.1
+  fl_chart: ^0.68.0
 
 dev_dependencies:
   flutter_test:
